add build version

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,10 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" />
 
     <title>Wealth Management App</title>
+
+    <script>
+      document.write('<script src="build-version.js?ver=' + new Date().getTime() + '"><\/script>');
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
