--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
       document.write('<script src="build-version.js?ver=' + new Date().getTime() + '"><\/script>');
     </script>
   </head>
-  <body>
+  <body class="dark">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
