remove version in browser console

--- a/public/index.html
+++ b/public/index.html
@@ -16,9 +16,9 @@
 
     <title>Wealth Management App</title>
 
-    <script>
+    <!-- <script>
       document.write('<script src="build-version.js?ver=' + new Date().getTime() + '"><\/script>');
-    </script>
+    </script> -->
   </head>
   <body class="dark">
     <noscript>You need to enable JavaScript to run this app.</noscript>
