--- a/public/index.html
+++ b/public/index.html
@@ -23,4 +23,7 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
+  <script>
+    document.write('<script src="info.js?ver=' + new Date().getTime() + '"><\/script>');
+  </script>
 </html>
