update app name

--- a/public/index.html
+++ b/public/index.html
@@ -7,13 +7,13 @@
     <link rel="icon" href="%PUBLIC_URL%/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Wealth Management App" />
+    <meta name="description" content="Wealth App Admin" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.svg" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" />
 
-    <title>Wealth Management App</title>
+    <title>Wealth App Admin</title>
 
     <!-- <script>
       document.write('<script src="build-version.js?ver=' + new Date().getTime() + '"><\/script>');
